test/library/standard/Map/testGetValueBadValType.good
testGetValueBadValType.chpl:12: error: getValue can only be called when a map value type is a non-nilable class
